# Democracy

./: Cargo.toml  README.md
src/: ballot.rs  console.rs  cooldown.rs  main.rs  scanner.rs
src/util/: mod.rs
