[package]
name = "democracy"
version = "0.1.0"
authors = ["Faisal <faisalpratamaputra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.10.1"
lazy_static = "1.4.0"
regex = "1.3.6"

[profile.release]
lto = true
panic = 'abort'
